--- a/src/app/agents/ui.glade
+++ b/src/app/agents/ui.glade
@@ -4,135 +4,123 @@
   <!-- interface-naming-policy project-wide -->
   <object class="GtkWindow" id="ui_window">
     <child>
-      <object class="GtkVBox" id="vbox1">
+      <object class="GtkTable" id="table2">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
+        <property name="n_rows">5</property>
+        <property name="n_columns">2</property>
         <child>
-          <object class="GtkHBox" id="hbox1">
+          <object class="GtkLabel" id="lRequests">
             <property name="visible">True</property>
-            <child>
-              <object class="GtkLabel" id="lRequests">
-                <property name="visible">True</property>
-                <property name="xpad">5</property>
-                <property name="label" translatable="yes">Requests In:</property>
-              </object>
-              <packing>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="lRequestsData">
-                <property name="visible">True</property>
-                <property name="ellipsize">start</property>
-              </object>
-              <packing>
-                <property name="position">1</property>
-              </packing>
-            </child>
+            <property name="xpad">5</property>
+            <property name="label" translatable="yes">Requests In:</property>
           </object>
           <packing>
-            <property name="position">0</property>
+            <property name="x_options"></property>
           </packing>
         </child>
         <child>
-          <object class="GtkHBox" id="hbox2">
+          <object class="GtkLabel" id="lHits">
             <property name="visible">True</property>
-            <child>
-              <object class="GtkLabel" id="lHits">
-                <property name="visible">True</property>
-                <property name="xpad">5</property>
-                <property name="label" translatable="yes">Hits:</property>
-              </object>
-              <packing>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="lHitsData">
-                <property name="visible">True</property>
-              </object>
-              <packing>
-                <property name="position">1</property>
-              </packing>
-            </child>
+            <property name="xpad">5</property>
+            <property name="label" translatable="yes">Hits:</property>
           </object>
           <packing>
-            <property name="position">1</property>
+            <property name="top_attach">1</property>
+            <property name="bottom_attach">2</property>
+            <property name="x_options">GTK_EXPAND</property>
           </packing>
         </child>
         <child>
-          <object class="GtkHBox" id="hbox3">
+          <object class="GtkLabel" id="lMBSuccess">
             <property name="visible">True</property>
-            <child>
-              <object class="GtkLabel" id="lMBSuccess">
-                <property name="visible">True</property>
-                <property name="label" translatable="yes">Successful calls:</property>
-              </object>
-              <packing>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="lMBSuccessData">
-                <property name="visible">True</property>
-              </object>
-              <packing>
-                <property name="position">1</property>
-              </packing>
-            </child>
+            <property name="xpad">5</property>
+            <property name="label" translatable="yes">Successful calls:</property>
           </object>
           <packing>
-            <property name="position">2</property>
+            <property name="top_attach">2</property>
+            <property name="bottom_attach">3</property>
+            <property name="x_options">GTK_EXPAND</property>
           </packing>
         </child>
         <child>
-          <object class="GtkHBox" id="hbox4">
+          <object class="GtkLabel" id="lMBFailed">
             <property name="visible">True</property>
-            <child>
-              <object class="GtkLabel" id="lMBFailed">
-                <property name="visible">True</property>
-                <property name="label" translatable="yes">Failed calls:</property>
-              </object>
-              <packing>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="lMBFailedData">
-                <property name="visible">True</property>
-              </object>
-              <packing>
-                <property name="position">1</property>
-              </packing>
-            </child>
+            <property name="xpad">5</property>
+            <property name="label" translatable="yes">Failed calls:</property>
           </object>
           <packing>
-            <property name="position">3</property>
+            <property name="top_attach">3</property>
+            <property name="bottom_attach">4</property>
+            <property name="x_options">GTK_EXPAND</property>
           </packing>
         </child>
         <child>
-          <object class="GtkHBox" id="hbox5">
+          <object class="GtkLabel" id="lDBEntries">
             <property name="visible">True</property>
-            <child>
-              <object class="GtkLabel" id="lDBEntries">
-                <property name="visible">True</property>
-                <property name="label" translatable="yes">DB Entries:</property>
-              </object>
-              <packing>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="lDBEntriesData">
-                <property name="visible">True</property>
-              </object>
-              <packing>
-                <property name="position">1</property>
-              </packing>
-            </child>
+            <property name="xpad">5</property>
+            <property name="label" translatable="yes">DB Entries:</property>
           </object>
           <packing>
-            <property name="position">4</property>
+            <property name="top_attach">4</property>
+            <property name="bottom_attach">5</property>
+            <property name="x_options">GTK_EXPAND</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel" id="lRequestsData">
+            <property name="visible">True</property>
+            <property name="xpad">1</property>
+            <property name="ellipsize">start</property>
+            <property name="width_chars">8</property>
+          </object>
+          <packing>
+            <property name="left_attach">1</property>
+            <property name="right_attach">2</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel" id="lDBEntriesData">
+            <property name="visible">True</property>
+            <property name="width_chars">8</property>
+          </object>
+          <packing>
+            <property name="left_attach">1</property>
+            <property name="right_attach">2</property>
+            <property name="top_attach">4</property>
+            <property name="bottom_attach">5</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel" id="lMBFailedData">
+            <property name="visible">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">1</property>
+            <property name="right_attach">2</property>
+            <property name="top_attach">3</property>
+            <property name="bottom_attach">4</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel" id="lMBSuccessData">
+            <property name="visible">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">1</property>
+            <property name="right_attach">2</property>
+            <property name="top_attach">2</property>
+            <property name="bottom_attach">3</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel" id="lHitsData">
+            <property name="visible">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">1</property>
+            <property name="right_attach">2</property>
+            <property name="top_attach">1</property>
+            <property name="bottom_attach">2</property>
           </packing>
         </child>
       </object>
